--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Max1Truc/BuuildRun.git"
+    "url": "git+https://github.com/Max1Truc/BuildRun.git"
   },
   "keywords": [
     "graviton",
